--- a/T-kazu_header.html
+++ b/T-kazu_header.html
@@ -1,4 +1,4 @@
-﻿<div class="headimg"><h4>Welcome to my blog</h4>
+﻿<div class="headimg"><h4>test Welcome to my blog</h4>
 <h5>～おススメ記事3選～</h5>
 <div id="menubar">
     <ul>
